Fixed flickering

--- a/assets/sass/layout/_container.scss
+++ b/assets/sass/layout/_container.scss
@@ -52,6 +52,7 @@ section.container {
 					overflow: hidden;
 					color: $colorTypeDark;
 					position: absolute;
+					backface-visibility: hidden;
 					
 					.zoomBox {
 						background-color: $colorWashLightTrans;
